Added backend capability to select pledge weights for stake based pledging.
