# vibrantnet/core/src/types/premium/discordServerMemberPledge.ts
@@ -1,0 +1,4 @@
+export type DiscordServerMemberPledge = {
+  guildName: string
+  premiumWeight: number
+};
